--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Blog App</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-    <link rel="stylesheet" href="/stylesheet/app.css">
+    <link rel="stylesheet" href="/stylesheets/app.css">
   </head>
   <body>
     <div class="ui inverted menu">
