added delete button for blog post

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,6 +14,9 @@
       <p><i><%- blog.body %></i></p>
     </div>
     <a href="/blogs/<%= blog._id %>/edit" class="ui black button">Edit Post</a>
+    <form id="delete" action="/blogs/<%= blog._id%>?_method=DELETE" method="post">
+      <button class="ui red button">Delete</button>
+    </form>
   </div>
 </div>
 <a href="/blogs" class="ui violet button" id="back">Go Back</a>
