added class barIcon

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
   <body>
     <div class="ui inverted menu">
       <div class="ui container">
-        <div class="header item"><i class="paper plane icon blue"></i> <a href="/">Blog API</a></div>
+        <div class="header item"><i class="paper plane icon blue barIcon"></i> <a href="/">Blog API</a></div>
         <a href="/" class="item">Home</a>
         <a href="/blogs/new" class="item">New Post</a>
       </div>
