--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,35 @@
 <%include ./partials/header %>
+<div class="ui main text container" id="posts">
+  <div class="ui huge header">
+    <h1 class="index-title">Welcome to the FrontPage</h1>
+  </div>
+  <div class="ui top attached segment">
+    <div class="ui divided items">
 
-<h1 class="index-title">Welcome to the FrontPage</h1>
-<!-- <ul> -->
-  <% blogs.forEach((blog)=>{ %>
-    <div class="BlogPost">
-      <!-- <h2><li><blog.title %></li></h2> -->
-      <h2><%= blog.title %></h2>
-      <img src="<%= blog.image %>" alt="">
-      <span><%= blog.created %></span>
-      <p><i><%- blog.body.substring(0,100) %>....</i></p>
-      <a href="/blogs/<%= blog._id %>" class="ui blue button" >Read More</a>
-      <a href="/blogs/<%= blog._id %>/edit" class="ui green button">Edit Post</a>
+      <% blogs.forEach((blog)=>{ %>
+        <div class="BlogPost item">
+          <!-- <h2><li><blog.title %></li></h2> -->
+          <div class = "image"><img src="<%= blog.image %>" alt=""></div>
+          <div class="content">
+            <a class="header" href="/blogs/<%= blog._id %>"><%= blog.title %></a>
+            <div class="meta">
+              <span><%= blog.created.toDateString() %></span>
+            </div>
+            <div class="description">
+              <p><i><%- blog.body.substring(0,100) %>....</i></p>
+            </div>
+            <div class="extra">
+              <a href="/blogs/<%= blog._id %>" class="ui floated violet button">
+                Read More <i class="right chevron icon"></i></a>
+              <a href="/blogs/<%= blog._id %>/edit" class="ui floated yellow button">Edit Post</a>
+            </div>
+          </div>
+        </div>
+        <% }) %>
+      </div>
     </div>
-<% }) %>
-<!-- </ul> -->
-<%include ./partials/footer %>
+  </div>
+
+
+
+  <%include ./partials/footer %>
